<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/search"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_idea"
        android:icon="@drawable/idea"
        android:title="@string/title_idea" />

    <item
        android:id="@+id/navigation_friends"
        android:icon="@drawable/users"
        android:title="@string/title_friends" />

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/settings"
        android:title="@string/title_setting" />

</menu>
